--- a/styles.css
+++ b/styles.css
@@ -91,7 +91,7 @@ header {
 ------------------------------------*/
 .projects {
   /*background: #F7FFF7;*/
-  background-image: url(.../images/sharon-mccutcheon-unsplash.jpg);
+  background-image: url(sharon-mccutcheon-unsplash.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -118,7 +118,7 @@ header {
 /* Work Experience
 ------------------------------------*/
 .work-experience {
-  background-image: url(../images/annie-spratt-unsplash.jpg);
+  background-image: url(annie-spratt-unsplash.jpg);
   background-position: 75% 25%;
   /*background: #A1C6D7;*/
 }
@@ -128,7 +128,7 @@ header {
 /* Education
 ------------------------------------*/
 .education {
-  background-image: url(../images/joanna-kosinska-unsplash.jpg);
+  background-image: url(joanna-kosinska-unsplash.jpg);
   background-position: top right;
   background-size: cover;
   padding-bottom: 100px;
