--- a/styles.css
+++ b/styles.css
@@ -90,10 +90,11 @@ header {
 /* Projects
 ------------------------------------*/
 .projects {
-  /*background: #F7FFF7;*/
+  background: #F7FFF7;
+  /*
   background-image: url(sharon-mccutcheon-unsplash.jpg);
   background-position: center;
-  background-size: cover;
+  background-size: cover;*/
 }
 .projects a {
   color: #2F3061;
